[package]
name = "sorting-algorithm-benchmarker"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.dev]
opt-level = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.12.1"
colored = "2.1.0"
num = "0.4.3"
paste = "1.0.6"